--- a/index.html
+++ b/index.html
@@ -4,5 +4,7 @@
         <br>
         <h1>Hello World</h1>
         <p>This is a test file</p>
+        <br>
+        <center><p>Centered text</p></center>
     </body>
 </html>
