Added my project files from ITIS 3135

--- a/index.html
+++ b/index.html
@@ -1,10 +1,66 @@
-<html>
+<!DOCTYPE html>
+<html lang = "en">
+    <head>
+        <title>Ryan Martin -- UNCC</title>
+        <style>
+            body {
+                background-color: grey;
+                margin: 20px
+            }
+            .main {
+                font-family: sans-serif;
+                padding: 20px;
+                background-color: rgb(15, 77, 42);
+            }
+            #title {
+                text-align: center;
+                color: white;
+            }
+            .content {
+                color: rgb(185, 185, 185);
+                border: 1px solid black;
+                padding: 20px;
+                padding-left: 20px;
+            }
+            footer {
+                background-color: rgb(34, 45, 2);
+                font-family: sans-serif;
+                margin-top: 10px;
+                padding: 20px;
+                color: rgb(185, 185, 185);
+            }
+            a:visited {
+                color: grey;
+            }
+            a:hover {
+                color: white;
+            }
+            a {
+                color: blue;
+            }
+        </style>
+        <script src="https://lint.page/kit/4d0fe3.js" crossorigin="anonymous"></script>
+        <script>
+
+        </script>
+    </head>
     <body>
-        <br>
-        <br>
-        <h1>Hello World</h1>
-        <p>This is a test file</p>
-        <br>
-        <center><p>Centered text</p></center>
+        <main class = "main">
+            <div class = "main-content">
+                <h1 id = "title">This is Ryan Martin's Charlotte Homepage</h1>
+                <div class = "content">
+                    <p>Hello World Wide Web :)</p>
+                    <p>This is the site for my web-based work for the school, please check my links</p>
+                    <ul>
+                    <li>Click <a href="itis3135/">here</a> to acsess my 3135 site</li>
+                    <li>Click <a href="https://www.linkedin.com/in/claude-ryan-martin/" target = "_blank">here</a> to visit my LinkedIn page.</li>
+                    <li>Click <a href="https://github.com/crmart216">here</a> to checkout my GitHub</li>
+                    </ul>
+                </div>
+            </div>
+        </main>
+        <footer>
+            <p>Look! A footer.</p>
+        </footer>
     </body>
 </html>
