--- a/itis3135/index.html
+++ b/itis3135/index.html
@@ -1,7 +1,25 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Home || ITIS 3135 || Home</title>
+    <link rel="stylesheet" href="styles/default.css">
+    <link rel="icon" type="image/x-icon" href = "./images/favicon.ico">
+    <script src="https://lint.page/kit/4d0fe3.js" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.7.1.js" integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4=" crossorigin="anonymous"></script>
+    <script src="./scripts/loadHeaderFooter.js" id="load" data-info=".,header.html"></script>
+</head>
 <body>
-  <html>
-    <center>
-      <h1>ITIS 3135</h1>
-    </center>
-  </html>
+    <header>
+        <div id="header"></div>
+    </header>
+    <main>
+        <h2>ITIS 3135 Welcome</h2>
+        <p>This is all the content for my ITIS 3135 class</p>
+    </main>
+    <footer>
+        <div id="footer"></div>
+    </footer>
 </body>
+</html>
